# vorc

./: README.md
.github/workflows/: ci.yml
cora_description/: CMakeLists.txt  package.xml
cora_description/models/base/: model.config
cora_description/models/base/meshes/: base.dae
cora_description/models/materials/scripts/: model.material
cora_description/models/meshes/: base.dae  propellerL.dae  propellerR.dae
cora_description/models/propeller/meshes/: propellerL.dae  propellerR.dae
cora_description/urdf/: cora.urdf.xacro  cora.xacro  cora_dynamics_plugin.xacro  cora_v1.urdf.xacro  macros.xacro  thrusters.xacro
cora_description/urdf/sensors/: wamv_gps.xacro
cora_gazebo/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
cora_gazebo/urdf/: cora_gazebo_dynamics_plugin.xacro  cora_gazebo_dynamics_plugin.xacro~  cora_gazebo_thruster_config.xacro
tools/: code_check.sh
vorc_gazebo/: CMakeLists.txt  package.xml
vorc_gazebo/config/: rviz_cora.rviz
vorc_gazebo/include/vorc_gazebo/: gymkhana_scoring_plugin.hh  perception_scoring_plugin.hh  scoring_plugin.hh  vorc_perception_scoring_plugin.hh  vorc_scoring_plugin.hh
vorc_gazebo/launch/: evaluation.launch  gymkhana.launch  localization_example.launch  marina.launch  perception_task.launch  playback.launch  station_keeping.launch  task_gymkhana.launch  wayfinding.launch
vorc_gazebo/models/Buoy01/: model.config  model.sdf
vorc_gazebo/models/Buoy01/materials/scripts/: model.material
vorc_gazebo/models/marina/: model.config
vorc_gazebo/src/: gymkhana_scoring_plugin.cc  perception_scoring_plugin.cc  scoring_plugin.cc  vorc_perception_scoring_plugin.cc  vorc_scoring_plugin.cc
vorc_gazebo/worlds/: gymkhana.world.xacro  marina.world.xacro  marina.xacro  perception.world.xacro  perception_task.world.xacro  station_keeping.world.xacro  stationkeeping_task.world.xacro  wayfinding.world.xacro  wayfinding_task.world.xacro
vorc_gazebo/worlds/xacros/: gymkhana.xacro  include_all_xacros.xacro  marina_minus_scene.xacro
