<?xml version="1.0"?>
<package format="2">
  <name>cora_gazebo</name>
  <version>0.0.1</version>
  <description>The cora_gazebo package</description>
  <maintainer email="briansbingham@gmail.com">developer</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>
  <depend>wamv_gazebo</depend>
  <export>
  </export>
</package>
